update nav manu & add shop

--- a/shop.html
+++ b/shop.html
@@ -51,17 +51,17 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Blog</h2>
+        <h2>Shop</h2>
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Blog</li>
+          <li>Shop</li>
         </ol>
 
       </div>
     </div><!-- End Breadcrumbs -->
 
-    <!-- ======= Blog Section ======= -->
-    <section id="blog" class="blog">
+    <!-- ======= Shop Section ======= -->
+    <section id="shop" class="shop">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 posts-list">
