--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down">Welcome to <span>Like FLOOR StampConcrete</span></h2>
+            <h2 data-aos="fade-down">Welcome to <span class="text-warning">Like FLOOR StampConcrete</span></h2>
             <p data-aos="fade-up">รับทำพื้นคอนกรีตพิมพ์ลาย พื้นถนนคอนกรีต ออกแบบตกแต่งสวน ออกแบบบ้าน <br>รับเหมาก่อสร้าง ครบวงจร</p>
             <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">ติดต่อเรา</a>
           </div>
