--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - Contact</title>
+  <title>Like FLOOR StampConcrete</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -69,7 +69,7 @@
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-map"></i>
               <h3>Our Address</h3>
-              <p>ถนน เชียงใหม่-ลำปาง, ช้างเผือก, หมู่ที่ 5, เชียงใหม่ 50300, ประเทศไทย</p>
+              <p>ต.หนองจ๊อม อ.สันทราย เชียงใหม่ 50210, ประเทศไทย</p>
               <p>Chiang Mai, Thailand 50300</p>
             </div>
           </div><!-- End Info Item -->
@@ -97,7 +97,7 @@
           <div class="col-lg-6 ">
             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d944.2387175191884!2d98.96755156961497!3d18.80016446845161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDQ4JzAwLjYiTiA5OMKwNTgnMDUuNSJF!5e0!3m2!1sth!2sth!4v1708574624523!5m2!1sth!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe> -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d944.20712849908!2d98.97766746961497!3d18.805794168408827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDQ4JzIwLjkiTiA5OMKwNTgnNDEuOSJF!5e0!3m2!1sth!2sth!4v1708575098748!5m2!1sth!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d944.0106871164489!2d99.019368169615!3d18.840766968142944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDUwJzI2LjgiTiA5OcKwMDEnMTIuMCJF!5e0!3m2!1sth!2sth!4v1708668560733!5m2!1sth!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div><!-- End Google Maps -->
 
           <div class="col-lg-6">
