--- a/contact.html
+++ b/contact.html
@@ -157,6 +157,8 @@
   <script src="js/jquery/jquery.min.js"></script>
   <!-- ADD FOOTER -->
   <script src="js/footer.js"></script>
+
+  <script> var this_is_page = 'contact'; </script>
   <!-- ADD NAV_MANU -->
   <script src="js/nav_manu.js"></script>
 
